hphp/hack/test/typecheck/invalid_octal.php.exp
File "invalid_octal.php", line 4, characters 10-13:
Invalid digit for octal integers (Parsing[1002])
