hphp/hack/test/typecheck/invalid_octal.php
<?hh // partial

function f(): int {
  return 0090;
}
